# redfetch

./: README.md  pyproject.toml
src/redfetch/: api.py  config.py  config_firstrun.py  lua_packages.py  main.py  meta.py  settings.toml  sync.py  sync_discovery.py  sync_remote.py  sync_types.py  terminal_ui.py  terminal_ui.tcss  update_check.py  update_status.py
tests/: test_auto_run_eqbcs.py  test_breadcrumb.py  test_check.py  test_config_validation.py  test_env_selection.py  test_first_run_setup.py  test_level_check_cache.py  test_licensed_resources_filtering.py  test_lua_packages.py  test_sync_pipeline_regressions.py  test_sync_plan_summary.py
