[project]
name = "redfetch"
description = "Download and publish EverQuest scripts and software using the RedGuides API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dynamic = ["version", "urls"]
authors = [
    { name = "Redbot", email = "ask@redguides.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities"
]
# run `pip-check` to check for outdated dependencies
dependencies = [
    "aiofiles~=25.1",
    "aiosqlite~=0.22",
    "aiohttp~=3.13",
    "cachetools~=7.0",
    "diskcache~=5.6",
    "dynaconf~=3.2",
    "httpx[http2]~=0.28",
    "keepachangelog~=2.0",
    "keyring~=25.6",
    "md2bbcode",
    "packaging~=26.0",
    "pydantic~=2.12",
    "platformdirs~=4.5",
    "psutil~=7.2",
    "pyperclip~=1.11",
    "rich~=14.3",
    "tenacity~=9.1",
    "textual~=8.1",
    "textual-fspicker~=1.0",
    "tomlkit~=0.14",
    "typer~=0.21",
    "pywin32; sys_platform == 'win32'"
]

[project.scripts]
redfetch = "redfetch.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/redfetch/__about__.py"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://www.redguides.com"
Documentation = "https://www.redguides.com/community/resources/redfetch.3177/"
Repository = "https://github.com/RedGuides/redfetch"
Issues = "https://github.com/RedGuides/redfetch/issues"
Changelog = "https://github.com/RedGuides/redfetch/blob/main/CHANGELOG.md"
Source_archive = "https://github.com/RedGuides/redfetch/archive/{commit_hash}.zip"

[tool.hatch.build.targets.wheel]
packages = ["src/redfetch"]

[tool.hatch.build.targets.wheel.force-include]
"redfetch.ico" = "redfetch/redfetch.ico"

[tool.hatch.envs.dev]
dependencies = [
  "textual-dev>=1.7.0",
  "pip-tools",
  "pip-check"
]
